# FRCMake

./: .gitignore  CMakeLists.txt  README.md  flake.nix  package.nix
cmake/: FRC.cmake  FRCMakeConfig.cmake.in  FindWPILib.cmake  SystemcoreToolchain.cmake
example/: CMakeLists.txt
example/src/main/deploy/: example.txt
